<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    >

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="@string/order_id_mock"
            android:id="@+id/movie_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:background="@color/bgContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:maxHeight="128dp"
                android:maxWidth="128dp"
                android:scaleType="fitXY"
                />

            <TextView
                android:id="@+id/content_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"

                android:layout_toRightOf="@+id/movie_icon"
                android:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content_overView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                tools:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="14sp"
                android:layout_alignStart="@+id/content_name_view"
                android:layout_below="@+id/content_name_view"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <!--<TextView-->
                <!--android:id="@+id/content_from_badge"-->
                <!--style="@style/ContentMainBadgeTitle"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentStart="true"-->
                <!--/>-->

                <!--android:layout_alignStart="@id/content_from_badge"-->
                <!--android:layout_below="@id/content_from_badge"-->

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/content_from1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/releaseDate"
                    android:layout_below="@id/releaseDate"
                    tools:text="@string/content_from2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <!--<RelativeLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1">-->

            <!--<TextView-->
            <!--android:id="@+id/content_to_badge"-->
            <!--style="@style/ContentMainBadgeTitle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:text="@string/to_badge" />-->

            <!--<TextView-->
            <!--android:id="@+id/content_to_address_1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignStart="@id/content_to_badge"-->
            <!--android:layout_below="@id/content_to_badge"-->
            <!--android:text="@string/content_to1_mock"-->
            <!--android:textColor="@color/mainTextColor"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold" />-->

            <!--<TextView-->
            <!--android:id="@+id/content_to_address_2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignStart="@id/content_to_address_1"-->
            <!--android:layout_below="@id/content_to_address_1"-->
            <!--android:text="@string/content_to2_mock"-->
            <!--android:textColor="@color/mainTextColor"-->
            <!--android:textSize="14sp" />-->

            <!--</RelativeLayout>-->

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <!--<TextView-->
                <!--android:id="@+id/content_delivery_date_badge"-->
                <!--style="@style/ContentMainBadgeTitle"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentStart="true"-->
                <!--/>-->
                <!--android:layout_alignStart="@id/content_delivery_date_badge"-->
                <!--android:layout_below="@id/content_delivery_date_badge"-->

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/movie_rating"
                    android:layout_below="@id/movie_rating"
                    tools:text="@string/delivery_date_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>


        </LinearLayout>

        <!-- request button -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="@string/request_btn_text"
            android:background="@color/btnRequest"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>